@@ -30,12 +30,15 @@ WIX_FILE = f"{BUILD_DIR}/installer/Synergy.sln"
 MSI_FILE = f"{BUILD_DIR}/installer/bin/Release/Synergy.msi"
 
 
-def run_elevated(script, args=None, use_sys_argv=True):
+def run_elevated(script, args=None, use_sys_argv=True, wait_for_exit=False):
     if not args and use_sys_argv:
         args = " ".join(sys.argv[1:])
 
-    env.persist_lock_file(LOCK_FILE)
-    command = f"{script} --pause-on-exit --lock-file {LOCK_FILE} {args}"
+    if wait_for_exit:
+        args += f" --lock-file {LOCK_FILE}"
+        env.persist_lock_file(LOCK_FILE)
+
+    command = f"{script} {args} --pause-on-exit"
     print(f"Running script with elevated privileges: {command}")
 
     WINDOW_HANDLE = None
@@ -60,14 +63,15 @@ def run_elevated(script, args=None, use_sys_argv=True):
 
     print("Script is running with elevated privileges")
 
-    with open(LOCK_FILE, "r") as f:
-        pid = f.read()
+    if wait_for_exit:
+        with open(LOCK_FILE, "r") as f:
+            pid = f.read()
 
-    print(f"Waiting for elevated process to exit: {pid}")
-    while os.path.exists(LOCK_FILE):
-        # Intentionally wait forever, since this code should not run where a developer
-        # has no control, such as in a CI environment.
-        pass
+        print(f"Waiting for elevated process to exit: {pid}")
+        while os.path.exists(LOCK_FILE):
+            # Intentionally wait forever, since this code should not run where a developer
+            # has no control, such as in a CI environment.
+            pass
 
 
 def is_admin():
